# rust-slack-inviter

./: .env-sample  .gitignore  Cargo.toml  Procfile  README.md  app.json
src/: main.rs  response.rs  settings.rs  slack.rs
static/: index.html
static/css/: style.css
